# Polana

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.core.json  tsconfig.json
apps/core-client/: package.json
apps/core-client/src/: index.ts
apps/demo-cli/: package.json
apps/demo-cli/src/: index.ts
apps/ingestion-api/: package.json  tsconfig.json
apps/ingestion-api/src/: index.ts
docs/: address-model.md  architecture.md  attestation-object.schema.json  binding-object.schema.json  canonicalization.md  chain-b-evaluation.md  core-boundary.md  core-checklist.md  dual-chain-strategy.md  e2e-local.md  id-generation.md  memory-object.schema.json  node-skeleton.md  reference-adapters.md  relayer.md  runtime-skeleton.md  schema.md  solana-chain-b.md  storage-adapters.md  substrate-pallet.md  versioning-policy.md
examples/: polana-solana-sink.json  polana-substrate-config.json
rust/pallet-memory-registry/: Cargo.toml
rust/pallet-memory-registry/src/: lib.rs  mock.rs  tests.rs
rust/polana-core/: Cargo.toml
rust/polana-core/src/: anchor.rs  attestation.rs  binding.rs  builder.rs  canonical.rs  error.rs  ids.rs  lib.rs  memory.rs  signer.rs
rust/polana-node/: Cargo.toml
rust/polana-node/src/: artifacts.rs  chain_spec.rs  main.rs  runtime.rs  service.rs
rust/polana-relayer/: Cargo.toml
rust/polana-relayer/src/: lib.rs  main.rs
rust/polana-runtime/: Cargo.toml
rust/polana-runtime/src/: lib.rs
rust/polana-submitter/: Cargo.toml
rust/polana-submitter/src/: main.rs
rust/solana-memory-mirror/: Cargo.toml
rust/solana-memory-mirror/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
