[package]
name = "polana-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
borsh = { version = "1.5.7", features = ["derive"] }
polana-core = { path = "../polana-core" }
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] }
scale-decode = "0.16.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-program = "2.3.0"
solana-memory-mirror = { path = "../solana-memory-mirror" }
solana-sdk = "2.3.1"
subxt = "0.50.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.13"
