[package]
name = "polana-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { version = "46.0.0", default-features = false }
frame-system = { version = "46.0.0", default-features = false }
pallet-memory-registry = { path = "../pallet-memory-registry", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
sp-core = { version = "40.0.0", default-features = false }
sp-io = { version = "45.0.0", default-features = false }
sp-runtime = { version = "46.0.0", default-features = false }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "pallet-memory-registry/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std"
]
